k8s-security-framework/policies/pod-security/KSP-POD-008/KSP-POD-008-drop-all-capabilities.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: drop-all-capabilities
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/id: ksp-pod-008
  annotations:
    policies.kyverno.io/title: Drop ALL Capabilities
    policies.kyverno.io/category: KSP Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Requires all container types to drop all Linux
      capabilities.
    policies.ksp.io/profiles: restricted
    policies.ksp.io/dev-mode: Audit
    policies.ksp.io/staging-mode: Audit
    policies.ksp.io/prod-mode: Enforce
    policies.ksp.io/exception: controlled
spec:
  evaluation:
    background:
      enabled: true
  failurePolicy: Fail
  webhookConfiguration:
    timeoutSeconds: 10
  validationActions:
  - Audit
  - Warn
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: (((object.spec.containers + object.spec.?initContainers.orValue([])
      + object.spec.?ephemeralContainers.orValue([])))).all(c, has(c.securityContext)
      && has(c.securityContext.capabilities) && c.securityContext.capabilities.?drop.orValue([]).exists(x,
      x == 'ALL'))
    message: Add capabilities.drop with ALL to every container.
