k8s-security-framework/policies/pod-security/KSP-POD-008/tests/boundary-pass-additional-edge-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-008-boundary-init-additional-boundary-pass
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      capabilities:
        drop:
        - ALL
  initContainers:
  - name: init
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      capabilities:
        drop:
        - ALL
