k8s-security-framework/policies/pod-security/KSP-POD-008/tests/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-008-exception
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
