k8s-security-framework/policies/pod-security/KSP-POD-008/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-008-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-008-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-008-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: secure
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      capabilities:
        drop:
        - ALL
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    securityContext:
      capabilities:
        drop:
        - NET_RAW
