k8s-security-framework/policies/pod-security/KSP-POD-008/tests/negative-capabilities-drop-missing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-008-negative-missiing-drop
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
