k8s-security-framework/policies/pod-security/KSP-POD-008/tests/positive-drop-all-capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-008-positive-one-container
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        capabilities:
          drop: [ALL]
